fix: 자바 9부터 deprecated된 newInstance() method 변경